--- a/web/themes/custom/bluetheme/css/style.css
+++ b/web/themes/custom/bluetheme/css/style.css
@@ -7,3 +7,8 @@ a.external-link::after {
 a.external-link:hover::after {
   box-shadow: inset 0 -30px 0 0 #fff;
 }
+
+#block-aboutme {
+  background-color: #E7EDF1;
+  padding: 15px;
+}
